--- a/doc/ApiDocument/data/styles.css
+++ b/doc/ApiDocument/data/styles.css
@@ -102,7 +102,12 @@
 .html_button {
   text-align:center;
 }
+.tree_node {
+  text-align:left;
+}
 .table_cell {
+}
+.menu_item {
 }
 .sticky_1 {
   text-align:left;
